language/move-lang/tests/move_check/locals/use_after_move_while.exp
error[E06002]: use of unassigned variable
  ┌─ tests/move_check/locals/use_after_move_while.move:4:28
  │
4 │         while (cond) { _ = move x };
  │                            ^^^^^^
  │                            │
  │                            Invalid usage of variable 'x'
  │                            The variable might not have a value due to this position. The variable must be assigned a value before being used

error[E06002]: use of unassigned variable
  ┌─ tests/move_check/locals/use_after_move_while.move:9:45
  │
9 │         while (cond) { if (cond) break; _ = move x };
  │                                             ^^^^^^
  │                                             │
  │                                             Invalid usage of variable 'x'
  │                                             The variable might not have a value due to this position. The variable must be assigned a value before being used

error[E06002]: use of unassigned variable
   ┌─ tests/move_check/locals/use_after_move_while.move:14:32
   │
14 │         while (cond) { let y = x; _ = move x; y; };
   │                                ^      ------ The variable might not have a value due to this position. The variable must be assigned a value before being used
   │                                │       
   │                                Invalid usage of variable 'x'

error[E06002]: use of unassigned variable
   ┌─ tests/move_check/locals/use_after_move_while.move:14:39
   │
14 │         while (cond) { let y = x; _ = move x; y; };
   │                                       ^^^^^^
   │                                       │
   │                                       Invalid usage of variable 'x'
   │                                       The variable might not have a value due to this position. The variable must be assigned a value before being used

error[E06002]: use of unassigned variable
   ┌─ tests/move_check/locals/use_after_move_while.move:19:32
   │
19 │         while (cond) { let y = x; if (cond) continue; _ = move x; y; };
   │                                ^                          ------ The variable might not have a value due to this position. The variable must be assigned a value before being used
   │                                │                           
   │                                Invalid usage of variable 'x'

error[E06002]: use of unassigned variable
   ┌─ tests/move_check/locals/use_after_move_while.move:19:59
   │
19 │         while (cond) { let y = x; if (cond) continue; _ = move x; y; };
   │                                                           ^^^^^^
   │                                                           │
   │                                                           Invalid usage of variable 'x'
   │                                                           The variable might not have a value due to this position. The variable must be assigned a value before being used

error[E06002]: use of unassigned variable
   ┌─ tests/move_check/locals/use_after_move_while.move:24:32
   │
24 │         while (cond) { let y = &x; _ = move y; _ = move x };
   │                                ^^                  ------ The variable might not have a value due to this position. The variable must be assigned a value before being used
   │                                │                    
   │                                Invalid usage of variable 'x'

error[E06002]: use of unassigned variable
   ┌─ tests/move_check/locals/use_after_move_while.move:24:52
   │
24 │         while (cond) { let y = &x; _ = move y; _ = move x };
   │                                                    ^^^^^^
   │                                                    │
   │                                                    Invalid usage of variable 'x'
   │                                                    The variable might not have a value due to this position. The variable must be assigned a value before being used

